# ROS_KinovaGen3

./: CMakeLists.txt  README.md  package.xml
include/: ExceptionTypes.h  utilities.h
include/kinova_test/: HumanState.h  KinovaConfig.h  KinovaGen3Model.h  Matrix.h  controller.h  mylib.h
launch/: experiment.launch  local.launch  remote.launch
msg/: gripperMsg.msg  kinovaMsg.msg
src/: HumanState.cpp  KinovaConfig.cpp  KinovaGen3Model.cpp  Matrix.cpp  adaptive_control.cpp  adptive_control.cpp  chang_tracking.cpp  controller.cpp  following_human_control.cpp  following_human_manipulator.cpp  folowing_human_manipulator.cpp  gravity_compensation.cpp  hsu_tracking.cpp  kinova_joint_position.cpp  kinova_test.cpp  kinova_torque.cpp  mylib.cpp  platform_control.cpp  utilities.cpp
